Op 1 (night and day), cosmetic change for testing (added was)

--- a/1/index.html
+++ b/1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>In the beginning...</title>
+		<title>In the beginning was...</title>
 		<style>
 			body {
 				background-color: black;
