Added actual traffic light code

--- a/traffic_light/index.html
+++ b/traffic_light/index.html
@@ -7,6 +7,14 @@
         </style>
     </head>
     <body>
+
+        <div class="rectangle">
+          <span class="dot" id="red"></span>
+          <span class="dot" id="yellow"></span>
+          <span class="dot" id="green"></span>
+        </div>
+
         <script src="script.js"></script>
+        <script src="../0/index.js"></script>
     </body>
 </html>
